--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
@@ -5,7 +5,7 @@
         <div class="field size-third">
           <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
             <mat-label class="label">Fire Name</mat-label>
-            <input matInput class="disabled-input" type="text" formControlName="incidentNumberSequence" disabled>
+            <input matInput class="disabled-input" type="text" [(ngModel)]="incident.fireName" formControlName="fireName" disabled>
           </mat-form-field>
         </div>
         <div class="field size-third">
@@ -17,15 +17,15 @@
         <div class="field size-third radio-checkbox-group">
             <mat-label id="fireOfNote">Wildfire Of Note</mat-label>
             <mat-icon class="fire-icon">local_fire_department</mat-icon>
-            <mat-radio-group matInput aria-label="Wildfire of Note" formControlName="fireOfNotePublishedInd">
-              <mat-radio-button value="fireOfNotePublishedInd">No</mat-radio-button>
-              <mat-radio-button value="fireOfNotePublishedInd">Yes</mat-radio-button>
+            <mat-radio-group matInput aria-label="Wildfire of Note" formControlName="fireOfNote" [(ngModel)]="incident.fireOfNote">
+              <mat-radio-button value="N">No</mat-radio-button>
+              <mat-radio-button value="Y">Yes</mat-radio-button>
             </mat-radio-group>
         </div>
         <div class="field size-full">
           <mat-form-field class="item-full-width" appearance="outline" floatLabel="always">
             <mat-label class="label required">Location</mat-label>
-            <input matInput type="text" formControlName="geographicDescription">
+            <input matInput type="text" formControlName="location" [(ngModel)]="incident.location">
           </mat-form-field>
         </div>
       </div>
@@ -45,7 +45,7 @@
                 <mat-option value="">
                   <span class="placeholder">Select...</span>
                 </mat-option>
-                <mat-option *ngFor = "let item of sizeTypeOptions" value="{{item.id}}">
+                <mat-option *ngFor = "let item of sizeTypeOptions" [value]="item.id">
                   <span>{{item.optionValue}}</span>
                 </mat-option>
               </mat-select>
@@ -77,16 +77,16 @@
         <div class="field size-third">
           <mat-form-field appearance="standard" floatLabel="always">
             <mat-label class="label required">Cause</mat-label>
-            <input matInput class="disabled-input" type="text" formControlName="cause" disabled>
             <mat-select appWFSingleSelect appWFPlaceholder="Select..."
               aria-label="Cause"
               formControlName="cause"
+              [(ngModel)]="incident.cause"
               [options]="causeOptions"
               (valueChange)="setCauseDisclaimer($event)">
                 <mat-option value="">
                   <span class="placeholder">Select...</span>
                 </mat-option>
-                <mat-option *ngFor = "let item of causeOptions" value="{{item.id}}">
+                <mat-option *ngFor = "let item of causeOptions" [value]="item.id">
                   <span>{{item.optionValue}}</span>
                 </mat-option>
               </mat-select>
