--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -143,6 +143,13 @@
     font-family: $font-family-main;
     font-size: 13px;
   }
+  .mat-button-wrapper{
+    color:$colour-white;
+  }
+  .mat-simple-snackbar-action{
+    border: 1px solid white;
+    border-radius: 5px;
+  }
 }
 
 
@@ -156,6 +163,42 @@
   left: -55px;
   color: #2E7940;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!-- Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) --%3E%3Cpath d='M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z' fill='%232e7940'/%3E%3C/svg%3E");
+  background-size: 24px;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.snackbar-info {
+  background-color: $colour-info-grey;
+  color: $colour-white;
+  position: inherit;
+  padding: 18px 16px!important;
+  .mat-simple-snackbar{
+    font-family: $font-family-main;
+    font-size: 13px;
+  }
+  .mat-button-wrapper{
+    color:$colour-white;
+  }
+  .mat-simple-snackbar-action{
+    border: 1px solid white;
+    border-radius: 5px;
+  }
+}
+
+
+.snackbar-info:before {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 60px;
+  background-color: white;
+  top: 0;
+  left: -55px;
+  color: $colour-info-grey;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 0 24 24' width='24px' fill='%2337464F'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z'/%3E%3C/svg%3E");
   background-size: 24px;
   background-repeat: no-repeat;
   background-position: center;
