Fix to hide urls in screen mode

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
@@ -141,6 +141,14 @@
   }
 }
 
+.show-print {
+  display: none !important;
+}
+
+.no-print {
+  display: block !important;
+}
+
 @media print{
   :host {
     font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
