--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -27,6 +27,13 @@
   }
 }
 
+::ng-deep .show-print {
+  display: none !important;
+}
+::ng-deep .no-print {
+  display: block !important;
+}
+
 ::ng-deep .qr-code {
   display: none;
 }
