current-alert-tab part 1

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
@@ -18,7 +18,7 @@
         </p>
     </article>
 </section>
-<section>
+<section class="current-orders">
   <h1>CURRENT ORDERS / ALERTS</h1>
   <article>
     <div class="evac-list" *ngFor="let evac of evacOrders">
