--- a/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.html
@@ -1,6 +1,6 @@
 <div class="headers">
     <div class="field">
-        <mat-label class="label">Notice Typ</mat-label>
+        <mat-label class="label">Notice Type</mat-label>
         <select appWFSingleSelect appWFPlaceholder="Select..."
                 aria-label="Type"
                 [options]="alertTypeOptions"
