--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
@@ -1,5 +1,6 @@
 :host {
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  background-color: lightgray;
 }
 
 ::ng-deep .wildfires-tabs {
@@ -41,6 +42,8 @@ mat-tab-group {
   overflow: hidden;
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
   padding: 20px;
+  margin: auto;
+  background-color: white;
   h2 {
     font-size: 24px;
     font-weight: normal;
