change toggle label

--- a/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.html
@@ -14,8 +14,8 @@
 
     <div class="field"> 
         <div class="toggle-bar">
-            <span>All Alerts</span>
-            <mat-slide-toggle>Alert Near Me</mat-slide-toggle>
+            <span>All Notices</span>
+            <mat-slide-toggle>Notices Near Me</mat-slide-toggle>
         </div>
     </div>
 </div>
