--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
@@ -143,7 +143,6 @@ mat-tab-group {
 .fire-centre-table {
   display: flex;
   flex-direction: column;
-  max-width: 450px;
   font-size: 16px;
   padding: 10px;
   .row {
@@ -156,9 +155,13 @@ mat-tab-group {
   }
   .cell {
     margin-right: auto;
+    width: 110px;
   }
   .value-cell {
-    margin-left: auto;
+    width: 200px;
+    max-width: 18vw;
+    min-width: 100px;
+    text-align: center;
   }
 }
 
