--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -294,6 +294,16 @@ section {
     .mat-icon{
         vertical-align: middle;
     }
+
+    &.FIRST {
+        color:grey;
+        pointer-events: none !important
+    }
+
+    &.LAST {
+        color:grey;
+        pointer-events: none !important
+    }
 }
 
 .paging-control:hover{
