--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -119,6 +119,7 @@
         display: flex;
         justify-content: center;
         overflow-x: auto;
+        border-bottom: 1px solid #dddddd;
 
         .item {
             margin: 0 10px;
