--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
@@ -102,7 +102,7 @@
                 cdkAutosizeMaxRows="5"
                 formControlName="causeComments"></textarea>
           </mat-form-field>
-          <span *ngIf="showLearnMoreText">Lean more about what causes wildfires <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/what-causes-wildfire" target="_blank">here</a></span>
+          <span>Learn more about what causes wildfires <a target="_blank" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/what-causes-wildfire">here</a></span>
         </div>
       </div>
     </fieldset>
