--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -1,6 +1,5 @@
 ::ng-deep .wildfires-tabs{
 
-    border-top: 1px solid #dddddd;
     padding-top: 1rem;
     font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
     .mat-tab-group {
@@ -293,6 +292,16 @@ section {
     text-align: center;
     .mat-icon{
         vertical-align: middle;
+    }
+
+    &.FIRST {
+        color:grey;
+        pointer-events: none !important
+    }
+
+    &.LAST {
+        color:grey;
+        pointer-events: none !important
     }
 }
 
