--- a/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.scss
@@ -85,6 +85,22 @@ select{
         border: 1px solid #dddddd;
         .notice-item{
             border-bottom: 1px solid #dddddd;
+            
+            .item-header{
+                font-size: 18px;
+                font-weight: 700;
+                color: black !important;
+                text-decoration: underline;
+                padding: 10px 20px 5px;
+            }
+
+            .label {
+                color:#D20000;
+                font-size: 0.87rem;
+                font-weight: 400;
+                display: inline-flex;
+                padding-left: 15px;
+            }
         }
     }
 }
