--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="item-row">
                     <span class="item-title">Last Updated: </span>
-                    <span class="item-content">{{convertToDateWithTime(incident.newsCreatedTimestamp)}}</span>
+                    <span class="item-content">{{convertToDateWithDayOfWeek(incident.newsCreatedTimestamp)}}</span>
                 </div>
                 <div class="item-row">
                     <span class="item-title">Fire Centre: </span>
