--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list-header/wildfires-list-header.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list-header/wildfires-list-header.component.html
@@ -4,7 +4,7 @@
         </p>
         <button mat-raised-button color="primary" class="stage-of-control" (click)="openStageOfControlLink()">What are Stages of Control?</button>
     </div>
-    <mat-tab-group>
+    <mat-tab-group class="tab-group">
         <mat-tab label="Wildfires">
             <wf-list-container-desktop></wf-list-container-desktop>
         </mat-tab>
